# quest_complete

./: .gitignore  Dockerfile  dune-project  quest_complete.opam  quest_complete.opam.template
lib/: dune
lib/server/: dune  router.ml
lib/server/domain/: game.ml
lib/server/handlers/: dune  games.ml  pages.ml
lib/server/templates/: dune
lib/server/templates/games/: dune  index.eml.html  show.eml.html
lib/server/templates/games/partials/: dune  indexGame.eml.html
lib/server/templates/layouts/: dune  main.eml.html
lib/server/templates/pages/: dune  homepage.eml.html  homepage.ml
lib/server/views/: dune  games.ml  pages.ml
lib/server/views/_templates/: dune  templates.ml
lib/server/views/_templates/_layouts/: dune  main.ml
lib/server/views/_templates/games/: index.ml  show.ml
lib/server/views/_templates/pages/: homepage.ml
lib/server/views/components/: components.ml  dune
lib/server/views/components/games/: card.ml
lib/server/views/games/: index.ml  show.ml
lib/server/views/pages/: homepage.ml
